# ai-companion-mvp

./: .env.example  .gitignore  AiCompanionMvp.sln  README.md  pyproject.toml
.github/scripts/: create-issues.md  create_issues.py
.github/workflows/: build-app.yml  create-issues.yml  deploy-app.yml  deploy-infra.yml  terraform-validate-plan.yml
app/: auth.py  config.py  database.py  llm.py  main.py  models.py  repository.py  schemas.py
docs/: api-spec.md
infrastructure/: README.md
infrastructure/docs/: DEPLOYMENT_GUIDE.md  SECURITY_NOTES.md
infrastructure/scripts/: bootstrap-tf-backend.ps1  deploy-app.ps1  setup-oidc.ps1
infrastructure/terraform/: app_insights.tf  app_service.tf  backend.hcl.example  locals.tf  main.tf  outputs.tf  provider.tf  terraform.tfvars.dev  terraform.tfvars.prod  variables.tf
issues/: issues.csv
pipelines/: README.md
src/AiCompanion.Api/: AiCompanion.Api.csproj  Program.cs  appsettings.Development.json
src/AiCompanion.Api/Contracts/: ChatRequest.cs  ChatResponse.cs  HistoryMessage.cs  HistoryResponse.cs  MemoryAuditEventResponse.cs  MemoryAuditResponse.cs  MemoryConsentRequest.cs  MemoryConsentResponse.cs  MemoryItemResponse.cs  MemoryListResponse.cs  MemoryUpsertRequest.cs  (+1 more)
tests/: conftest.py  test_chat_api.py  test_history_api.py  test_settings.py  test_ws_chat.py
tests/AiCompanion.Api.Tests/: AiCompanion.Api.Tests.csproj  ApiWebApplicationFactory.cs  ChatApiTests.cs  HistoryApiTests.cs  LlmRequestErrorHandlerTests.cs  MemoryApiTests.cs  OpenAiLlmClientTests.cs  SettingsTests.cs  WsChatTests.cs
tools/: perf_smoke.py
(+23 files in other folders)
